--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -45,12 +45,16 @@
     display: block;
     padding: 5px 8px;
     font-size: 0.8rem;
-    background-color: rgba($mainBlue, 0.3);
+    background-color: rgba($mainBlue, 0.5);
 
     @mixin atMedium {
       padding: 12px 0;
       font-size: 1rem;
       background-color: transparent;
+
+      &.is-current-link {
+        color: #fabb69;
+      }
     }
   }
 }
